fixed loading gif, allow multiple inputs in motion and strength, allow strength to have math eqs and check for proper format, fix awkward break in transition motions

--- a/static/main.css
+++ b/static/main.css
@@ -392,6 +392,20 @@ audio {
     font-size: 2em;
 }
 
+#fill-defaults{
+    width: 150px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    /* Center icon inside button */
+    align-items: center;
+    background-color: rgb(230, 147, 147);
+    margin-left: 50px;
+    /* border: 1px solid #ddd; */
+    border-radius: 5px;
+    cursor: pointer;
+}
+
 #finalize-timestamps {
 
     padding: 10px 20px;
@@ -584,4 +598,23 @@ select {
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     margin-right: 20px;
+}
+
+#seed {
+    margin-left: 10px;
+    margin-bottom: 20px;
+}
+
+.spinner {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #ccc;
+    border-top: 5px solid #3498db;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
